2005-08-13  Romain Francoise  <romain@orebokech.com>

	* message.el (message-cite-original-1): New function.
	(message-cite-original): Use it.
	(message-cite-original-without-signature): Ditto.

2005-08-08  Romain Francoise  <romain@orebokech.com>

	* message.el (message-yank-empty-prefix): New variable.
	(message-indent-citation): Use it.
	(message-cite-original-without-signature): Respect X-No-Archive.

2005-08-08  Simon Josefsson  <jas@extundo.com>

	* pgg.el: Autoload url-insert-file-contents instead of loading
	w3/url.
	(pgg-insert-url-with-w3): Don't load url here.

2005-08-07  Jesper Harder  <harder@phys.au.dk>

	* message.el (message-kill-to-signature): Don't insert newline at
	bol.
	(message-newline-and-reformat): Bind fill-paragraph-function to nil.

2005-08-06  Romain Francoise  <romain@orebokech.com>

	* message.el (message-user-fqdn): Fix typo in docstring.

2005-08-05  Daiki Ueno <ueno@unixuser.org>

	* mml2015.el (mml2015-pgg-sign): Make sure micalg is correct.

	* pgg-parse.el (pgg-parse-hash-algorithm-alist): Add SHA-2.

2005-08-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-bodies.el (mm-encode-body): Use coding system rather than
	charset to encode text.

	* mm-util.el (mm-find-mime-charset-region): Attempt to reduce the
	number of charsets if utf-8 is available (XEmacs).

2005-08-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-button-valid-localpart-regexp): New variable
	taken from `gnus-button-mid-or-mail-regexp'.
	(gnus-button-mid-or-mail-regexp, gnus-button-alist): Use it.
	(gnus-button-alist): Improve regexp for domain part of the MIDs
	for news:localpart@domain buttons.
	(gnus-button-ctan-directory-regexp): Update.

2005-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sieve-manage.el (sieve-manage-interactive-login): Use
	make-local-variable rather than make-variable-buffer-local.
	(sieve-manage-open): Ditto.
	(sieve-manage-authenticate): Ditto.

	* mml.el (mml-generate-mime-1): Make the content type default to